Update .gitignore to include frontend build artifacts and environment files; modify README to provide a more descriptive title.

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,4 @@
-# If you prefer the allow list template instead of the deny list, see community template:
-# https://github.com/github/gitignore/blob/main/community/Golang/Go.AllowList.gitignore
-#
+# ----- GO -----
 # Binaries for programs and plugins
 *.exe
 *.exe~
@@ -23,3 +21,27 @@ go.work.sum
 
 # env file
 .env
+
+# ----- FRONTEND -----
+# Node modules
+node_modules/
+
+# Build output
+dist/
+
+# Local environment variables
+.env.local
+
+# Log files
+*.log
+
+# Vite cache
+.vite/
+
+# Editor directories and files
+.vscode/
+.idea/
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
